--- a/.github/workflows/status.yml
+++ b/.github/workflows/status.yml
@@ -10,66 +10,70 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Update service statuses
+      # Check status and update GitHub Issue
+      - name: Update service status
         uses: actions/github-script@v7
         with:
           script: |
-            const core = require("@actions/core");
             const fetch = require("node-fetch");
 
-            // Define services to check
-            const services = [
-              { name: "Website", url: "https://hunt.theveridionlibrary.org/status" },
-            ];
+            // Define single service
+            const service = {
+              name: "The Veridion Hunt Status",
+              url: "https://hunt.theveridionlibrary.org/status"
+            };
 
-            for (const service of services) {
-              core.startGroup(`Fetching status of ${service.name}`);
+            // Start collapsible log group
+            core.startGroup(`Fetching status of ${service.name}`);
 
-              let status = "up";
-              try {
-                console.log(`Pinging ${service.url} ...`);
-                const res = await fetch(service.url);
-                if (!res.ok) status = "degraded";
-              } catch (err) {
-                console.log("Request failed:", err.message);
-                status = "down";
+            let status = "up";
+
+            try {
+              console.log(`Pinging ${service.url} ...`);
+              const res = await fetch(service.url);
+              if (!res.ok) {
+                status = "degraded";
               }
+            } catch (err) {
+              console.log("Request failed:", err.message);
+              status = "down";
+            }
 
-              console.log(`Result for ${service.name}: ${status.toUpperCase()}`);
+            console.log(`Result for ${service.name}: ${status.toUpperCase()}`);
 
-              // Fetch existing issues
-              const issues = await github.rest.issues.listForRepo({
+            // Get existing issues in repo
+            const issues = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: "open",
+            });
+
+            const issue = issues.data.find(i => i.title === service.name);
+
+            if (issue) {
+              // Update label if issue exists
+              await github.rest.issues.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                state: "open",
+                issue_number: issue.number,
+                labels: [status],
               });
-
-              const issue = issues.data.find(i => i.title === service.name);
-
-              if (issue) {
-                // Update labels
-                await github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  labels: [status],
-                });
-                console.log(`Updated issue #${issue.number} with label: ${status}`);
-              } else {
-                // Create new issue
-                const newIssue = await github.rest.issues.create({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  title: service.name,
-                  labels: [status],
-                });
-                console.log(`Created issue #${newIssue.data.number} with label: ${status}`);
-              }
-
-              core.endGroup(); // collapsible group in GH Actions UI
+              console.log(`Updated issue #${issue.number} with label: ${status}`);
+            } else {
+              // Create issue if missing
+              const newIssue = await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: service.name,
+                labels: [status],
+              });
+              console.log(`Created issue #${newIssue.data.number} with label: ${status}`);
             }
+
+            core.endGroup(); // close collapsible log group
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
