--- a/.github/workflows/status.yml
+++ b/.github/workflows/status.yml
@@ -10,34 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Check status and update GitHub Issue
       - name: Update service status
         uses: actions/github-script@v7
         with:
           script: |
-            const fetch = require("node-fetch");
-
-            // Define single service
+            // Single service to monitor
             const service = {
               name: "The Veridion Hunt Status",
               url: "https://hunt.theveridionlibrary.org/status"
             };
 
-            // Start collapsible log group
             core.startGroup(`Fetching status of ${service.name}`);
 
             let status = "up";
 
             try {
               console.log(`Pinging ${service.url} ...`);
-              const res = await fetch(service.url);
-              if (!res.ok) {
-                status = "degraded";
-              }
+              const res = await fetch(service.url); // Node 18+ built-in fetch
+              if (!res.ok) status = "degraded";
             } catch (err) {
               console.log("Request failed:", err.message);
               status = "down";
@@ -45,7 +38,7 @@ jobs:
 
             console.log(`Result for ${service.name}: ${status.toUpperCase()}`);
 
-            // Get existing issues in repo
+            // List open issues
             const issues = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -55,7 +48,6 @@ jobs:
             const issue = issues.data.find(i => i.title === service.name);
 
             if (issue) {
-              // Update label if issue exists
               await github.rest.issues.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -64,7 +56,6 @@ jobs:
               });
               console.log(`Updated issue #${issue.number} with label: ${status}`);
             } else {
-              // Create issue if missing
               const newIssue = await github.rest.issues.create({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -74,6 +65,6 @@ jobs:
               console.log(`Created issue #${newIssue.data.number} with label: ${status}`);
             }
 
-            core.endGroup(); // close collapsible log group
+            core.endGroup();
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
